Revert "Fix Jobs nav: overflow-y:scroll on html forces iOS to use visual viewport for fixed positioning"
This reverts commit f1de9e05f24dbed206940b5dd195bb8d47e4bf7e.

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,6 @@
   html {
     height: 100%;
     height: -webkit-fill-available;
-    overflow-y: scroll;
   }
   body, #root {
     height: 100%;
